Fix spacing in body details

--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -44,7 +44,6 @@
 .description {
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: -15px;
     padding-bottom: 10px;
 }
 
